k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kamysoft-erp
  labels:
    app: kamysoft-erp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kamysoft-erp
  template:
    metadata:
      labels:
        app: kamysoft-erp
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: kamysoft-erp
          image: ghcr.io/khalilksa33/kamysoft-erp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8089
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
            requests:
              cpu: "100m"
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kamysoft-erp
  labels:
    app: kamysoft-erp
spec:
  ports:
    - port: 8089
      targetPort: 8089
      protocol: TCP
      name: http
  selector:
    app: kamysoft-erp
  type: NodePort
