k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kamysoft-erp-deployment
  labels:
    app: kamysoft-erp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kamysoft-erp
  template:
    metadata:
      labels:
        app: kamysoft-erp
    spec:
      containers:
        - name: kamysoft-erp
          image: ghcr.io/khalilksa33/kamysoft-erp:latest
          ports:
            - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: kamysoft-erp-service
spec:
  type: LoadBalancer
  selector:
    app: kamysoft-erp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
