k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kamysoft-erp-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "26i.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kamysoft-erp
                port:
                  number: 8089
    - host: "*.26i.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kamysoft-erp
                port:
                  number: 8089
